[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daiw-music-brain"
version = "0.1.0"
description = "Digital Audio intelligent Workstation - Emotion-first music generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "DAiW Project"}
]
keywords = ["music", "midi", "emotion", "generation", "production"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Artistic Software",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "midiutil>=1.2.1",
    "mido>=1.3.0",
]

[project.optional-dependencies]
audio = [
    "numpy>=1.24.0",
    "librosa>=0.10.0",
    "scipy>=1.10.0",
]
theory = [
    "music21>=9.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]
all = [
    "daiw-music-brain[audio,theory,dev]",
]

[project.scripts]
daiw = "music_brain.cli:main"

[project.urls]
Homepage = "https://github.com/seanburdgeseng/DAiW-Music-Brain"
Documentation = "https://github.com/seanburdgeseng/DAiW-Music-Brain#readme"
Repository = "https://github.com/seanburdgeseng/DAiW-Music-Brain"
Issues = "https://github.com/seanburdgeseng/DAiW-Music-Brain/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["music_brain*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
