[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "penta-core"
version = "0.1.0"
description = "Music Theory Rule-Breaking Framework - Integrating DAiW and iDAW systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Penta Core Project"}
]
keywords = [
    "music-theory", "counterpoint", "harmony", "voice-leading", 
    "rule-breaking", "composition", "daiw", "idaw"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Artistic Software",
    "Topic :: Education",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]
rich = [
    "rich>=13.0.0",
]
all = [
    "penta-core[dev,rich]",
]

[project.scripts]
penta-demo = "demo:main"

[project.urls]
Homepage = "https://github.com/seanburdgeseng/penta-core"
Documentation = "https://github.com/seanburdgeseng/penta-core#readme"
Repository = "https://github.com/seanburdgeseng/penta-core"

[tool.setuptools.packages.find]
where = ["."]
include = ["penta_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
